force-app/main/default/objects/Especies__c/Especies__c.object-meta.xml
<CustomObject>
    <label>Especies</label>
    <nameField>
        <label>Nombre de Especies</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>epecies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>