force-app/main/default/objects/Especies__c/fields/Descripcion__c.field-meta.xml
<CustomField>
    <fullName>Descripcion__c</fullName>
    <label>Descripcion</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>