force-app/main/default/objects/Especies__c/fields/Imagen__c.field-meta.xml
<CustomField>
    <fullName>Imagen__c</fullName>
    <formula>IMAGE(imagen_URL__c, Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Imagen</label>
    <type>Text</type>
</CustomField>