force-app/main/default/objects/Especies__c/fields/imagen_URL__c.field-meta.xml
<CustomField>
    <fullName>imagen_URL__c</fullName>
    <label>imagen URL</label>
    <type>Url</type>
</CustomField>