force-app/main/default/objects/Especies__c/fields/Localalizacion__c.field-meta.xml
<CustomField>
    <fullName>Localalizacion__c</fullName>
    <label>Localalizacion</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Adentro</fullName>
                <default>true</default>
                <label>Adentro</label>
            </value>
            <value>
                <fullName>Al aire libre</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>