force-app/main/default/objects/Especies__c/fields/Pulverizacion__c.field-meta.xml
<CustomField>
    <fullName>Pulverizacion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pulverizacion</label>
    <type>Checkbox</type>
</CustomField>