force-app/main/default/objects/Especies__c/fields/Siembra__c.field-meta.xml
<CustomField>
    <fullName>Siembra__c</fullName>
    <label>Siembra</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Meses</valueSetName>
    </valueSet>
</CustomField>