force-app/main/default/objects/Especies__c/fields/Temperatura_ideal__c.field-meta.xml
<CustomField>
    <fullName>Temperatura_ideal__c</fullName>
    <label>Temperatura ideal</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>